\name{NEWS}
\title{NEWS file for the \pkg{Uniquorn} bioconductor package }
\section{Changes in version 2.3.5 [2019-02-27]}{
    \subsection{Fixed another windows VCF parse error}{
        \itemize{
            \item Fixed yet another VCF file parsing error associated with the VariantAnnotation R package parser.
        }
    }
}
\section{Changes in version 2.3.4 [2019-02-25]}{
    \subsection{Fixed windows VCF parse error}{
        \itemize{
            \item Uniquorn experienced an error when parsing the internal test vcf file on Windows systems.
        }
    }
}
\section{Changes in version 2.3.3 [2019-02-22]}{
    \subsection{Unzip test vcf file}{
        \itemize{
            \item Unzipped the tested vcf file since VarriantAnnotion parser failed to read zipped file in future R version 3.6
        }
    }
}
\section{Changes in version 2.3.2 [2019-02-04]}{
    \subsection{Remove dependency}{
        \itemize{
            \item Removed dependency on data.table
            \item Removed data.table import due to biocondcutor request
        }
    }
}
\section{Changes in version 2.1.5 [2018-11-29]}{
    \subsection{Updated BiocView}{
        \itemize{
            \item Updated BiocView
        }
    }
}
\section{Changes in version 2.1.4 [2018-10-10]}{
    \subsection{Bioconductor compliance}{
        \itemize{
            \item Minor bugfixes regarding the removal of CCLs
        }
    }
}
\section{Changes in version 2.1.3 [2018-10-03]}{
    \subsection{Bioconductor compliance}{
        \itemize{
            \item Minor bugfixes regarding the removal of CCLs and reference libraries
        }
    }
}
\section{Changes in version 1.99.3 [2018-01-03]}{
    \subsection{Bioconductor compliance}{
        \itemize{
            \item Minor modifications to comply with Bioconductor regulations
        }
    }
}
\section{Changes in version 1.99.2 [2018-20-02]}{
    \subsection{Added RNA-seq and panel-seq capability}{
        \itemize{
            \item Some more minor bugfixes