@@ -11,6 +11,7 @@ export(show_contained_variants_for_ccl)
 export(show_contained_variants_in_library)
 export(show_which_ccls_contain_variant)
 import(GenomicRanges)
+import(IRanges)
 import(R.utils)
 import(WriteXLS)
 import(foreach)
@@ -19,6 +20,7 @@ importFrom(IRanges,IRanges)
 importFrom(IRanges,findOverlaps)
 importFrom(IRanges,subsetByOverlaps)
 importFrom(VariantAnnotation,readVcf)
+importFrom(data.table,fread)
 importFrom(stats,aggregate)
 importFrom(stats,integrate)
 importFrom(stats,pbeta)
